force-app/main/default/objects/Connector_Config_Field__mdt/Connector_Config_Field__mdt.object-meta.xml
<CustomObject>
    <description>Declarative connector configuration schema. Raw secrets must be stored in Named Credentials, External Credentials, or secure references, not these records.</description>
    <label>Connector Config Field</label>
    <pluralLabel>Connector Config Fields</pluralLabel>
</CustomObject>