force-app/main/default/objects/Connector_Config_Field__mdt/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>