force-app/main/default/objects/Connector_Config_Field__mdt/fields/Legacy_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Field_API_Name__c</fullName>
    <label>Legacy Field API Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>