force-app/main/default/objects/Connector_Config_Field__mdt/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secret</label>
    <type>Checkbox</type>
</CustomField>